--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
   "name": "tdd-strict-equal",
   "version": "1.0.0",
-  "description": "In this exercise you will be using a test driven development (TDD) approach to implement a `strictEqual()` function. The `strictEqual()` function will work the way the `===` operator does but you are not allowed to use this operator. For example, `strictEqual(5, '5')` would return `false` but `strictEqual('a', 'a')` would return `true`.",
-  "main": ".eslintrc.js",
-    "scripts": {
-    "test": "mocha ./tests/*.test.js",
-    "lint": "eslint --format stylish .",
-    "lint-fix": "eslint --format stylish --fix ."
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "lint": "./node_modules/.bin/eslint --format codeframe .",
+    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe .",
+    "test": "./node_modules/.bin/mocha test.js"
   },
-    "type": "module",
-    "url": "git+https://github.com/melaniejane/tdd-strict-equal.git"
-  ,
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/melaniejane/tdd-strict-equal/issues"
-  },
-  "homepage": "https://github.com/melaniejane/tdd-strict-equal#readme",
   "devDependencies": {
-    "chai": "^4.3.6",
-    "eslint": "^8.12.0",
-    "mocha": "^9.2.2"
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.2"
   }
 }
